Final commit, decided to go another way.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -6,7 +6,7 @@
 		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 		<meta content="utf-8" http-equiv="encoding">
 		<link rel="stylesheet" href="css/bootstrap.min.css">
-		<link rel="stylesheet" href="css/bootstrap-theme.min.css">
+		
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/mobile.css">
 
@@ -19,103 +19,112 @@
 				<img class="mf-logo center-block" src="images/mf-logo.png">
 				<div class="container-fluid">
 					<div class="links row">
-						<a href="#classes" class="link">Classes</a>
-						<a href="#photos" class="link">Photos</a>
-						<a href="#contact" class="link">Contact</a>
+						<!--<a href="#news" class="link btn btn-default">News</a>-->
+						<a href="#classes" class="link btn btn-default">Classes</a>
+						<a href="#photos" class="link btn btn-default">Photos</a>
+						<a href="#contact" class="link btn btn-default">Contact</a>
 					</div>
 				</div>
 				<img class="center-block mf-gym" src="images/mf-gym.jpg">
 			</div>
 		</section>
+
+		<!--<section id="news">
+			<div class="container center-block center-v">
+				<h1 class="dark-text">News and Announcements</h1><br />
+				<h4 class="dark-text">Coming soon!</h4>
+				<a href="#top" class="top-btn btn btn-default">Return to top</a>
+			</div>
+		</section>-->
 		
 		<section id="classes">
 			<div class="container center-block center-v">
-				<h1>Classes and Times</h1>
+				<h1>Classes and Times</h1><br />
 				<table class="table well">
 					<tr>
 						<th>Class</th>
 						<th>Days</th>
 						<th>Time</th>
-						<th></th>
 					</tr>
 					<tr>
-						<td>Bootcamp</td>
-						<td>M, T, W, T, F</td>
+						<td>Morning Bootcamp</td>
+						<td>M, T, W, T</td>
 						<td>5:00am</td>
-						<td><a href="#" class="btn btn-default">Sign-Up</a></td>
 					</tr>
 					<tr>
-						<td>Bootcamp</td>
-						<td>M, T, W, T, F</td>
+						<td>Morning Bootcamp</td>
+						<td>M, T, W, T</td>
 						<td>6:00am</td>
-						<td><a href="#" class="btn btn-default">Sign-Up</a></td>
 					</tr>
 					<tr>
-						<td>Personal Training</td>
-						<td>T, T</td>
-						<td>7:00am</td>
-						<td><a href="#" class="btn btn-default">Sign-Up</a></td>
-					</tr>
-					<tr>
-						<td>Bootcamp</td>
-						<td>M, T, W, T, F</td>
+						<td>Morning Bootcamp</td>
+						<td>M, T, W, T</td>
 						<td>8:30am</td>
-						<td><a href="#" class="btn btn-default">Sign-Up</a></td>
 					</tr>
 					<tr>
-						<td>Elite Bootcamp</td>
-						<td>M, T, W, T, F</td>
+						<td>Evening Bootcamp</td>
+						<td>M, T, W, T</td>
 						<td>5:00pm</td>
-						<td><a href="#" class="btn btn-default">Sign-Up</a></td>
 					</tr>
 					<tr>
-						<td>Elite Bootcamp</td>
-						<td>M, T, W, T, F</td>
+						<td>Evening Bootcamp</td>
+						<td>M, T, W, T</td>
 						<td>6:00pm</td>
-						<td><a href="#" class="btn btn-default">Sign-Up</a></td>
+					</tr>
+					<tr>
+						<td>Evening Bootcamp</td>
+						<td>M, T, W, T</td>
+						<td>7:00pm</td>
+					</tr>
+					<tr>
+						<td>Run/Hike @ TBD AM</td>
+						<td>Saturday and Sunday</td>
+						<td>TBD</td>
 					</tr>
 				</table>
-				<a href="#top" class="btn btn-default btn-sm">Return to top</a>
+				<a href="#top" class="top-btn btn btn-default">Return to top</a>
 			</div>
 		</section>
 		
 		<section id="photos">
 			<div class="container center-block">
-				<h3>Instagram us at <strong>#ultimatextraining</strong></h3><br />
+				<h3 class="dark-text">Instagram us at <a href="https://www.instagram.com/explore/tags/mulyanasfitness/" class="instagram" target="_blank"><strong>#mulyanasfitness</strong></a></h3><br />
 				<div id="instafeed"></div>
 				<script type="text/javascript">
+					//var isStandardWindow = window.matchMedia("(min-width: 640px)").matches;
+
 			    var feed = new Instafeed({
 			        get: 'tagged',
-			        tagName: 'ultimatextraining',
+			        tagName: 'mulyanasfitness',
 			        clientId: '2882920223834c1da80d796e0c1df377',
-			        template: '<a href="{{link}}"><img class="ig-thumb" src="{{image}}" /></a>',
-			        limit: 6
+			        template: '<a class="instagram-photos" href="{{link}}" target="_blank"><img class="ig-thumb" src="{{image}}" /></a>',
+			        limit: 128//isStandardWindow ? 32 : 6,
 			    });
 			    feed.run();
 				</script>
 
-				<a href="#top" class="btn btn-default btn-sm">Return to top</a>
+				<a href="#top" class="top-btn btn btn-default">Return to top</a>
 			</div>
 		</section>
 
 		<section id="contact">
 			<div class="container center-v">
-				<iframe allowfullscreen='' class='center-block google-map' frameborder='0' height='450' src='https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7418.9397996573225!2d-119.08788169901344!3d35.39169507897684!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80ea425a1fc68125%3A0xc5ee63bf740c7ed4!2s6914+Downing+Ave%2C+Bakersfield%2C+CA+93308!5e0!3m2!1sen!2sus!4v1444254634229' style='border:0' width='600'></iframe>
+				<h1 class="light-text">Contact us!</h1>
+				<iframe allowfullscreen='' class='center-block google-map' frameborder='0' height='450' src='https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7418.9397996573225!2d-119.08788169901344!3d35.39169507897684!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80ea425a1fc68125%3A0xc5ee63bf740c7ed4!2s6914+Downing+Ave%2C+Bakersfield%2C+CA+93308!5e0!3m2!1sen!2sus!4v1444254634229' style='border:0;pointer-events:none;' width='600'></iframe>
 
-				<address class="text-center">
+				<address class="light-text text-center">
 					<strong>Mulyana's Fitness</strong><br />
 					6914 Downing Ave<br />
 					Bakersfield, CA 93308<br />
 					<abbr title="phone">P:</abbr>(661) 444-3635<br />
 					<abbr title="email">E:</abbr>dicky@dmulyana.com<br />
 				</address>
-				<a href="#top" class="btn btn-default btn-sm">Return to top</a>
+				<a href="#top" class="top-btn btn btn-default">Return to top</a>
 			</div>
 		</section>
 
 		<script src="js/jquery-2.1.4.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
-		<!--<script src="js/parallax.min.js"></script>--> <!-- http://pixelcog.github.io/parallax.js/ -->
 		<script src="js/main.js"></script>
 	</body>
 </html>
